CustomObjects/objects/blng__InvoiceLine__c.object
<CustomObject>
    <description>The line items on Invoices, such as products etc.</description>
    <fields>
        <fullName>blng__ARStatus__c</fullName>
        <label>AR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceARStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c -  blng__Payments__c - blng__Credits__c + blng__Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BalancewithoutDebits__c</fullName>
        <formula>blng__TotalAmount__c - blng__PaymentsAgainstInvoiceLines__c + blng__RefundsAgainstInvoiceLines__c - blng__Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance without Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__CalculatedQuantity__c</fullName>
        <description>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</description>
        <inlineHelpText>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</inlineHelpText>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ChargeDate__c</fullName>
        <description>This is the date on which Invoice Line is Created</description>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Credits__c</fullName>
        <label>Credits</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Unallocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DebitPayments__c</fullName>
        <formula>blng__PaymentsAgainstDebitNoteLines__c - blng__RefundsAgainstDebitNoteLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitsPaymentAllocations__c</fullName>
        <label>Debits (Payment Allocations)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitsPaymentUnallocations__c</fullName>
        <label>Debits (Payment Unallocations)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Unallocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__GroupedQuantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceRunInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceInvoiceLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>OrderProductInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstDebitNoteLines__c</fullName>
        <label>Allocations Against Debit Note Lines</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Payments__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoiceLines__c</fullName>
        <label>Allocations Against Invoice Lines</label>
        <summarizedField>blng__PaymentAllocationInvoiceLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoiceLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoiceLine__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <formula>blng__PaymentsAgainstDebitNoteLines__c + blng__PaymentsAgainstInvoiceLines__c -  blng__RefundsAgainstDebitNoteLines__c - blng__RefundsAgainstInvoiceLines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceLinesProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstDebitNoteLines__c</fullName>
        <label>Unallocations Against Debit Note Lines</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Refunds__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoiceLines__c</fullName>
        <label>Unallocations Against Invoice Lines</label>
        <summarizedField>blng__PaymentAllocationInvoiceLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoiceLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoiceLine__c.blng__InvoiceLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxEngine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxEngine</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Summary</label>
        <referenceTo>blng__UsageSummary__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>UsageSummaryInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>